- Commit the assignment..

--- a/M1_Assignment/Namrata_Patel_NLP_Assignment_Part_1.ipynb
+++ b/M1_Assignment/Namrata_Patel_NLP_Assignment_Part_1.ipynb
@@ -103,7 +103,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 38,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -115,10 +115,10 @@
         {
           "data": {
             "text/plain": [
-              "<git.repo.base.Repo 'd:\\\\content\\\\M1_assignment\\\\.git'>"
+              "<git.repo.base.Repo 'd:\\\\content\\\\m1_repo\\\\.git'>"
             ]
           },
-          "execution_count": 4,
+          "execution_count": 38,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -132,8 +132,8 @@
         "\n",
         "\n",
         "# Clone the GitHub repository\n",
-        "repo_url = 'https://github.com/Namrata-Patel/NLP.git'\n",
-        "repo_dir = '/content/M1_assignment'  # Specify the directory to clone the repository\n",
+        "repo_url = 'https://github.com/Natural-Language-Processing-YU/Module-1-Assignment.git'\n",
+        "repo_dir = '/content/m1_repo'  # Specify the directory to clone the repository\n",
         "git.Repo.clone_from(repo_url, repo_dir)\n",
         "# Add the cloned repository directory to the import path\n",
         "\n"
@@ -150,7 +150,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 39,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -186,7 +186,7 @@
         "#extract the tweets\n",
         "import pandas as pd\n",
         "\n",
-        "tweets = pd.read_csv('https://raw.githubusercontent.com/Natural-Language-Processing-YU/Assignment-1/main/data/elonmusk_tweets.csv') #import file\n",
+        "tweets = pd.read_csv('/content/m1_repo/data/elonmusk_tweets.csv') #import file\n",
         "print(tweets.dtypes) #print data types\n",
         "print(tweets.text) #show tweets from file\n",
         "df = pd.DataFrame(tweets)\n",
@@ -223,7 +223,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 21,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -265,7 +265,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -274,7 +274,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 22,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -287,47 +287,29 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
+            "Original Text=> b'I made the volume on the Model S http://t.co/wMCnT53M go to 11.  Now I just need to work in a miniature Stonehenge...'\n",
             "\u001b[92mI made the volume on the Model S  go to 11.  Now I just need to work in a miniature Stonehenge...'\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "C:\\Users\\Namrata\\AppData\\Local\\Temp\\ipykernel_3508\\665540644.py:5: SettingWithCopyWarning: \n",
-            "A value is trying to be set on a copy of a slice from a DataFrame\n",
-            "\n",
-            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  df['text'][2816] = re.sub(regex_remove_hyperlinks, '', df['text'][2816])\n",
-            "C:\\Users\\Namrata\\AppData\\Local\\Temp\\ipykernel_3508\\665540644.py:10: SettingWithCopyWarning: \n",
-            "A value is trying to be set on a copy of a slice from a DataFrame\n",
-            "\n",
-            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  df['text'][2816] = re.sub(regex_hash, '', df['text'][2816])\n",
-            "C:\\Users\\Namrata\\AppData\\Local\\Temp\\ipykernel_3508\\665540644.py:15: SettingWithCopyWarning: \n",
-            "A value is trying to be set on a copy of a slice from a DataFrame\n",
-            "\n",
-            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  df['text'][2816] = re.sub(regex_string_beginning, '', df['text'][2816])\n"
           ]
         }
       ],
       "source": [
         "### START CODE HERE (REPLACE INSTANCES OF 'None' with your code) ###\n",
+        "print(\"Original Text=>\", df['text'][2816])\n",
+        "\n",
         "#create regex for hyperlinks\n",
         "regex_remove_hyperlinks = r'http[s]?://(?:[a-zA-Z]|[0-9]|[$-_@.&+]|[!*\\\\(\\\\),]|(?:%[0-9a-fA-F][0-9a-fA-F]))+'\n",
         "\n",
-        "df['text'][2816] = re.sub(regex_remove_hyperlinks, '', df['text'][2816])\n",
-        "\n",
+        "changed_text= re.sub(regex_remove_hyperlinks, '', df['text'][2816])\n",
         "# remove hashtags\n",
         "# only removing the hash # sign from the word\n",
         "regex_hash = r'#'\n",
-        "df['text'][2816] = re.sub(regex_hash, '', df['text'][2816])\n",
-        "\n",
+        "changed_text = re.sub(regex_hash, '', changed_text)\n",
         "\n",
         "# remove 'b from each string\n",
         "regex_string_beginning = r\"^b['\\\"]\"\n",
-        "df['text'][2816] = re.sub(regex_string_beginning, '', df['text'][2816])\n",
+        "changed_text = re.sub(regex_string_beginning, '', changed_text)\n",
+        "\n",
+        "df.loc[2816, 'text'] = changed_text\n",
         "\n",
         "### END CODE HERE ###\n",
         "\n",
@@ -352,7 +334,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 23,
       "metadata": {
         "id": "8ZoSOGaW2koc"
       },
@@ -369,7 +351,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 24,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -393,7 +375,7 @@
               "True"
             ]
           },
-          "execution_count": 20,
+          "execution_count": 24,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -416,7 +398,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 25,
       "metadata": {
         "id": "QD2ub7Dl2koe"
       },
@@ -454,7 +436,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 26,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -502,7 +484,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 27,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -547,7 +529,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 28,
       "metadata": {
         "id": "Nwq8pacZrLXg"
       },
@@ -588,13 +570,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 34,
       "metadata": {
         "id": "frUPXf542koh"
       },
       "outputs": [],
       "source": [
         "### START CODE HERE (REPLACE INSTANCES OF 'None' with your code) ###\n",
+        "\n",
+        "#Import the english stop words list from NLTK\n",
+        "stopwords_english = stopwords.words('english') \n",
+        "stemmer = PorterStemmer()\n",
         "\n",
         "def preprocess_tweet(tweet):\n",
         "    \"\"\"Process tweet function.\n",
@@ -604,16 +590,40 @@
         "        tweets_clean: a list of words containing the processed tweet\n",
         "\n",
         "    \"\"\"\n",
-        "    None\n",
-        "    return tweets_clean\n",
+        "    # Create regex for hyperlinks\n",
+        "    regex_remove_hyperlinks = r'http[s]?://(?:[a-zA-Z]|[0-9]|[$-_@.&+]|[!*\\\\(\\\\),]|(?:%[0-9a-fA-F][0-9a-fA-F]))+'\n",
+        "    \n",
+        "    # Remove hyperlinks\n",
+        "    changed_text = re.sub(regex_remove_hyperlinks, '', tweet)\n",
         "\n",
+        "    # Remove hashtags\n",
+        "    regex_hash = r'#'\n",
+        "    changed_text = re.sub(regex_hash, '', changed_text)\n",
+        "\n",
+        "    # Remove 'b from each string\n",
+        "    regex_string_beginning = r\"^b['\\\"]\"\n",
+        "    changed_text = re.sub(regex_string_beginning, '', changed_text)\n",
+        "\n",
+        "    # Tokenize the tweet\n",
+        "    tokenizer = TweetTokenizer(preserve_case=False, strip_handles=True, reduce_len=True)\n",
+        "    tokens = tokenizer.tokenize(changed_text)\n",
+        "\n",
+        "    # Remove stopwords and punctuation\n",
+        "    stopwords_english = set(stopwords.words('english'))\n",
+        "    clean_tokens = [word for word in tokens if word not in stopwords_english and word not in string.punctuation]\n",
+        "\n",
+        "    # Apply Porter Stemming\n",
+        "    stemmer = PorterStemmer()\n",
+        "    stemmed_tokens = [stemmer.stem(word) for word in clean_tokens]\n",
+        "\n",
+        "    return stemmed_tokens\n",
         "\n",
         "### END CODE HERE ###"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 36,
       "metadata": {
         "id": "YjioQEB12koh",
         "outputId": "d51f755d-83d4-4730-acb0-308485ad3ab7"
@@ -643,6 +653,7 @@
               "      <th>id</th>\n",
               "      <th>created_at</th>\n",
               "      <th>text</th>\n",
+              "      <th>preprocessed_tweets</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
@@ -651,33 +662,39 @@
               "      <td>849636868052275200</td>\n",
               "      <td>2017-04-05 14:56:29</td>\n",
               "      <td>b'And so the robots spared humanity ... https:...</td>\n",
+              "      <td>robot spare human ...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
               "      <td>848988730585096192</td>\n",
               "      <td>2017-04-03 20:01:01</td>\n",
               "      <td>b\"@ForIn2020 @waltmossberg @mims @defcon_5 Exa...</td>\n",
+              "      <td>exactli tesla absurdli overvalu base past that...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
               "      <td>848943072423497728</td>\n",
               "      <td>2017-04-03 16:59:35</td>\n",
               "      <td>b'@waltmossberg @mims @defcon_5 Et tu, Walt?'</td>\n",
+              "      <td>et tu walt</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
               "      <td>848935705057280001</td>\n",
               "      <td>2017-04-03 16:30:19</td>\n",
               "      <td>b'Stormy weather in Shortville ...'</td>\n",
+              "      <td>stormi weather shortvil ...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
               "      <td>848416049573658624</td>\n",
               "      <td>2017-04-02 06:05:23</td>\n",
               "      <td>b\"@DaveLeeBBC @verge Coal is dying due to nat ...</td>\n",
+              "      <td>coal die due nat ga frack basic dead</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>...</th>\n",
+              "      <td>...</td>\n",
               "      <td>...</td>\n",
               "      <td>...</td>\n",
               "      <td>...</td>\n",
@@ -687,34 +704,39 @@
               "      <td>142881284019060736</td>\n",
               "      <td>2011-12-03 08:22:07</td>\n",
               "      <td>b'That was a total non sequitur btw'</td>\n",
+              "      <td>total non sequitur btw</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2815</th>\n",
               "      <td>142880871391838208</td>\n",
               "      <td>2011-12-03 08:20:28</td>\n",
               "      <td>b'Great Voltaire quote, arguably better than T...</td>\n",
+              "      <td>great voltair quot arguabl better twain hear n...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2816</th>\n",
               "      <td>142188458125963264</td>\n",
               "      <td>2011-12-01 10:29:04</td>\n",
               "      <td>I made the volume on the Model S  go to 11.  N...</td>\n",
+              "      <td>made volum model go 11 need work miniatur ston...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2817</th>\n",
               "      <td>142179928203460608</td>\n",
               "      <td>2011-12-01 09:55:11</td>\n",
               "      <td>b\"Went to Iceland on Sat to ride bumper cars o...</td>\n",
+              "      <td>went iceland sat ride bumper car ice countri v...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2818</th>\n",
               "      <td>15434727182</td>\n",
               "      <td>2010-06-04 18:31:57</td>\n",
               "      <td>b'Please ignore prior tweets, as that was some...</td>\n",
+              "      <td>pleas ignor prior tweet someon pretend :) actual</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
-              "<p>2819 rows × 3 columns</p>\n",
+              "<p>2819 rows × 4 columns</p>\n",
               "</div>"
             ],
             "text/plain": [
@@ -731,20 +753,33 @@
               "2817  142179928203460608  2011-12-01 09:55:11   \n",
               "2818         15434727182  2010-06-04 18:31:57   \n",
               "\n",
-              "                                                   text  \n",
-              "0     b'And so the robots spared humanity ... https:...  \n",
-              "1     b\"@ForIn2020 @waltmossberg @mims @defcon_5 Exa...  \n",
-              "2         b'@waltmossberg @mims @defcon_5 Et tu, Walt?'  \n",
-              "3                   b'Stormy weather in Shortville ...'  \n",
-              "4     b\"@DaveLeeBBC @verge Coal is dying due to nat ...  \n",
-              "...                                                 ...  \n",
-              "2814               b'That was a total non sequitur btw'  \n",
-              "2815  b'Great Voltaire quote, arguably better than T...  \n",
-              "2816  I made the volume on the Model S  go to 11.  N...  \n",
-              "2817  b\"Went to Iceland on Sat to ride bumper cars o...  \n",
-              "2818  b'Please ignore prior tweets, as that was some...  \n",
+              "                                                   text  \\\n",
+              "0     b'And so the robots spared humanity ... https:...   \n",
+              "1     b\"@ForIn2020 @waltmossberg @mims @defcon_5 Exa...   \n",
+              "2         b'@waltmossberg @mims @defcon_5 Et tu, Walt?'   \n",
+              "3                   b'Stormy weather in Shortville ...'   \n",
+              "4     b\"@DaveLeeBBC @verge Coal is dying due to nat ...   \n",
+              "...                                                 ...   \n",
+              "2814               b'That was a total non sequitur btw'   \n",
+              "2815  b'Great Voltaire quote, arguably better than T...   \n",
+              "2816  I made the volume on the Model S  go to 11.  N...   \n",
+              "2817  b\"Went to Iceland on Sat to ride bumper cars o...   \n",
+              "2818  b'Please ignore prior tweets, as that was some...   \n",
               "\n",
-              "[2819 rows x 3 columns]"
+              "                                    preprocessed_tweets  \n",
+              "0                                 robot spare human ...  \n",
+              "1     exactli tesla absurdli overvalu base past that...  \n",
+              "2                                            et tu walt  \n",
+              "3                           stormi weather shortvil ...  \n",
+              "4                  coal die due nat ga frack basic dead  \n",
+              "...                                                 ...  \n",
+              "2814                             total non sequitur btw  \n",
+              "2815  great voltair quot arguabl better twain hear n...  \n",
+              "2816  made volum model go 11 need work miniatur ston...  \n",
+              "2817  went iceland sat ride bumper car ice countri v...  \n",
+              "2818   pleas ignor prior tweet someon pretend :) actual  \n",
+              "\n",
+              "[2819 rows x 4 columns]"
             ]
           },
           "metadata": {},
@@ -761,12 +796,19 @@
         "\n",
         "\n",
         "\"\"\"\n",
+        "# Apply preprocess_tweet to each tweet in the dataframe using a loop\n",
+        "for i in range(len(df)):\n",
+        "    df.at[i, 'preprocessed_tweets'] = ' '.join(preprocess_tweet(df.at[i, 'text'])) # Joins the generated tokens with white space..\n",
         "\n",
-        "None\n",
-        "### END CODE HERE ###\n",
-        "\n",
-        "display(df)"
+        "# Display the DataFrame\n",
+        "display(df)\n",
+        "### END CODE HERE ###"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": []
     },
     {
       "cell_type": "markdown",
@@ -790,7 +832,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 37,
       "metadata": {
         "id": "teSaHxFCykFP"
       },
