--- a/M1_Assignment/Namrata_Patel_NLP_Assignment_Part_1.ipynb
+++ b/M1_Assignment/Namrata_Patel_NLP_Assignment_Part_1.ipynb
@@ -103,7 +103,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": 40,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -113,14 +113,19 @@
       },
       "outputs": [
         {
-          "data": {
-            "text/plain": [
-              "<git.repo.base.Repo 'd:\\\\content\\\\m1_repo\\\\.git'>"
-            ]
-          },
-          "execution_count": 38,
-          "metadata": {},
-          "output_type": "execute_result"
+          "ename": "GitCommandError",
+          "evalue": "Cmd('git') failed due to: exit code(128)\n  cmdline: git clone -v -- https://github.com/Natural-Language-Processing-YU/Module-1-Assignment.git /content/m1_repo\n  stderr: 'fatal: destination path '/content/m1_repo' already exists and is not an empty directory.\n'",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mGitCommandError\u001b[0m                           Traceback (most recent call last)",
+            "Input \u001b[1;32mIn [40]\u001b[0m, in \u001b[0;36m<cell line: 11>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      9\u001b[0m repo_url \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhttps://github.com/Natural-Language-Processing-YU/Module-1-Assignment.git\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m     10\u001b[0m repo_dir \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m/content/m1_repo\u001b[39m\u001b[38;5;124m'\u001b[39m  \u001b[38;5;66;03m# Specify the directory to clone the repository\u001b[39;00m\n\u001b[1;32m---> 11\u001b[0m \u001b[43mgit\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mRepo\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mclone_from\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrepo_url\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mrepo_dir\u001b[49m\u001b[43m)\u001b[49m\n",
+            "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python39\\site-packages\\git\\repo\\base.py:1405\u001b[0m, in \u001b[0;36mRepo.clone_from\u001b[1;34m(cls, url, to_path, progress, env, multi_options, allow_unsafe_protocols, allow_unsafe_options, **kwargs)\u001b[0m\n\u001b[0;32m   1403\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m env \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m   1404\u001b[0m     git\u001b[38;5;241m.\u001b[39mupdate_environment(\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39menv)\n\u001b[1;32m-> 1405\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mcls\u001b[39m\u001b[38;5;241m.\u001b[39m_clone(\n\u001b[0;32m   1406\u001b[0m     git,\n\u001b[0;32m   1407\u001b[0m     url,\n\u001b[0;32m   1408\u001b[0m     to_path,\n\u001b[0;32m   1409\u001b[0m     GitCmdObjectDB,\n\u001b[0;32m   1410\u001b[0m     progress,\n\u001b[0;32m   1411\u001b[0m     multi_options,\n\u001b[0;32m   1412\u001b[0m     allow_unsafe_protocols\u001b[38;5;241m=\u001b[39mallow_unsafe_protocols,\n\u001b[0;32m   1413\u001b[0m     allow_unsafe_options\u001b[38;5;241m=\u001b[39mallow_unsafe_options,\n\u001b[0;32m   1414\u001b[0m     \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs,\n\u001b[0;32m   1415\u001b[0m )\n",
+            "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python39\\site-packages\\git\\repo\\base.py:1302\u001b[0m, in \u001b[0;36mRepo._clone\u001b[1;34m(cls, git, url, path, odb_default_type, progress, multi_options, allow_unsafe_protocols, allow_unsafe_options, **kwargs)\u001b[0m\n\u001b[0;32m   1299\u001b[0m     cmdline \u001b[38;5;241m=\u001b[39m remove_password_if_present(cmdline)\n\u001b[0;32m   1301\u001b[0m     log\u001b[38;5;241m.\u001b[39mdebug(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCmd(\u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[38;5;124m)\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124ms unused stdout: \u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[38;5;124m\"\u001b[39m, cmdline, stdout)\n\u001b[1;32m-> 1302\u001b[0m     \u001b[43mfinalize_process\u001b[49m\u001b[43m(\u001b[49m\u001b[43mproc\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mstderr\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mstderr\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   1304\u001b[0m \u001b[38;5;66;03m# Our git command could have a different working dir than our actual\u001b[39;00m\n\u001b[0;32m   1305\u001b[0m \u001b[38;5;66;03m# environment, hence we prepend its working dir if required.\u001b[39;00m\n\u001b[0;32m   1306\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m osp\u001b[38;5;241m.\u001b[39misabs(path):\n",
+            "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python39\\site-packages\\git\\util.py:483\u001b[0m, in \u001b[0;36mfinalize_process\u001b[1;34m(proc, **kwargs)\u001b[0m\n\u001b[0;32m    481\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"Wait for the process (clone, fetch, pull or push) and handle its errors accordingly\"\"\"\u001b[39;00m\n\u001b[0;32m    482\u001b[0m \u001b[38;5;66;03m# TODO: No close proc-streams??\u001b[39;00m\n\u001b[1;32m--> 483\u001b[0m proc\u001b[38;5;241m.\u001b[39mwait(\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n",
+            "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python39\\site-packages\\git\\cmd.py:657\u001b[0m, in \u001b[0;36mGit.AutoInterrupt.wait\u001b[1;34m(self, stderr)\u001b[0m\n\u001b[0;32m    655\u001b[0m     errstr \u001b[38;5;241m=\u001b[39m read_all_from_possibly_closed_stream(p_stderr)\n\u001b[0;32m    656\u001b[0m     log\u001b[38;5;241m.\u001b[39mdebug(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAutoInterrupt wait stderr: \u001b[39m\u001b[38;5;132;01m%r\u001b[39;00m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m%\u001b[39m (errstr,))\n\u001b[1;32m--> 657\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m GitCommandError(remove_password_if_present(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39margs), status, errstr)\n\u001b[0;32m    658\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m status\n",
+            "\u001b[1;31mGitCommandError\u001b[0m: Cmd('git') failed due to: exit code(128)\n  cmdline: git clone -v -- https://github.com/Natural-Language-Processing-YU/Module-1-Assignment.git /content/m1_repo\n  stderr: 'fatal: destination path '/content/m1_repo' already exists and is not an empty directory.\n'"
+          ]
         }
       ],
       "source": [
@@ -150,7 +155,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 41,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -223,7 +228,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 42,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -274,7 +279,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 43,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -398,7 +403,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 44,
       "metadata": {
         "id": "QD2ub7Dl2koe"
       },
@@ -436,7 +441,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 45,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -484,7 +489,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 46,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -529,7 +534,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 47,
       "metadata": {
         "id": "Nwq8pacZrLXg"
       },
@@ -570,7 +575,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 48,
       "metadata": {
         "id": "frUPXf542koh"
       },
@@ -579,8 +584,6 @@
         "### START CODE HERE (REPLACE INSTANCES OF 'None' with your code) ###\n",
         "\n",
         "#Import the english stop words list from NLTK\n",
-        "stopwords_english = stopwords.words('english') \n",
-        "stemmer = PorterStemmer()\n",
         "\n",
         "def preprocess_tweet(tweet):\n",
         "    \"\"\"Process tweet function.\n",
@@ -623,7 +626,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 49,
       "metadata": {
         "id": "YjioQEB12koh",
         "outputId": "d51f755d-83d4-4730-acb0-308485ad3ab7"
@@ -832,7 +835,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": 50,
       "metadata": {
         "id": "teSaHxFCykFP"
       },
