- Rerun the assignment code.

--- a/M1_Assignment/Namrata_Patel_NLP_Assignment_Part_1.ipynb
+++ b/M1_Assignment/Namrata_Patel_NLP_Assignment_Part_1.ipynb
@@ -77,23 +77,40 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Defaulting to user installation because normal site-packages is not writeable\n",
             "Collecting gitpython\n",
-            "  Downloading GitPython-3.1.41-py3-none-any.whl (196 kB)\n",
-            "Collecting gitdb<5,>=4.0.1\n",
-            "  Downloading gitdb-4.0.11-py3-none-any.whl (62 kB)\n",
-            "Collecting smmap<6,>=3.0.1\n",
-            "  Downloading smmap-5.0.1-py3-none-any.whl (24 kB)\n",
+            "  Obtaining dependency information for gitpython from https://files.pythonhosted.org/packages/45/c6/a637a7a11d4619957cb95ca195168759a4502991b1b91c13d3203ffc3748/GitPython-3.1.41-py3-none-any.whl.metadata\n",
+            "  Downloading GitPython-3.1.41-py3-none-any.whl.metadata (14 kB)\n",
+            "Collecting gitdb<5,>=4.0.1 (from gitpython)\n",
+            "  Obtaining dependency information for gitdb<5,>=4.0.1 from https://files.pythonhosted.org/packages/fd/5b/8f0c4a5bb9fd491c277c21eff7ccae71b47d43c4446c9d0c6cff2fe8c2c4/gitdb-4.0.11-py3-none-any.whl.metadata\n",
+            "  Using cached gitdb-4.0.11-py3-none-any.whl.metadata (1.2 kB)\n",
+            "Collecting smmap<6,>=3.0.1 (from gitdb<5,>=4.0.1->gitpython)\n",
+            "  Obtaining dependency information for smmap<6,>=3.0.1 from https://files.pythonhosted.org/packages/a7/a5/10f97f73544edcdef54409f1d839f6049a0d79df68adbc1ceb24d1aaca42/smmap-5.0.1-py3-none-any.whl.metadata\n",
+            "  Using cached smmap-5.0.1-py3-none-any.whl.metadata (4.3 kB)\n",
+            "Downloading GitPython-3.1.41-py3-none-any.whl (196 kB)\n",
+            "   ---------------------------------------- 0.0/196.4 kB ? eta -:--:--\n",
+            "   ---------------------------------------  194.6/196.4 kB 5.9 MB/s eta 0:00:01\n",
+            "   ---------------------------------------- 196.4/196.4 kB 4.0 MB/s eta 0:00:00\n",
+            "Using cached gitdb-4.0.11-py3-none-any.whl (62 kB)\n",
+            "Using cached smmap-5.0.1-py3-none-any.whl (24 kB)\n",
             "Installing collected packages: smmap, gitdb, gitpython\n",
             "Successfully installed gitdb-4.0.11 gitpython-3.1.41 smmap-5.0.1\n",
             "Note: you may need to restart the kernel to use updated packages.\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "[notice] A new release of pip is available: 23.2.1 -> 23.3.2\n",
+            "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
           ]
         }
       ],
@@ -103,7 +120,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -113,19 +130,14 @@
       },
       "outputs": [
         {
-          "ename": "GitCommandError",
-          "evalue": "Cmd('git') failed due to: exit code(128)\n  cmdline: git clone -v -- https://github.com/Natural-Language-Processing-YU/Module-1-Assignment.git /content/m1_repo\n  stderr: 'fatal: destination path '/content/m1_repo' already exists and is not an empty directory.\n'",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[1;31mGitCommandError\u001b[0m                           Traceback (most recent call last)",
-            "Input \u001b[1;32mIn [40]\u001b[0m, in \u001b[0;36m<cell line: 11>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      9\u001b[0m repo_url \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhttps://github.com/Natural-Language-Processing-YU/Module-1-Assignment.git\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m     10\u001b[0m repo_dir \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m/content/m1_repo\u001b[39m\u001b[38;5;124m'\u001b[39m  \u001b[38;5;66;03m# Specify the directory to clone the repository\u001b[39;00m\n\u001b[1;32m---> 11\u001b[0m \u001b[43mgit\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mRepo\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mclone_from\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrepo_url\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mrepo_dir\u001b[49m\u001b[43m)\u001b[49m\n",
-            "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python39\\site-packages\\git\\repo\\base.py:1405\u001b[0m, in \u001b[0;36mRepo.clone_from\u001b[1;34m(cls, url, to_path, progress, env, multi_options, allow_unsafe_protocols, allow_unsafe_options, **kwargs)\u001b[0m\n\u001b[0;32m   1403\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m env \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m   1404\u001b[0m     git\u001b[38;5;241m.\u001b[39mupdate_environment(\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39menv)\n\u001b[1;32m-> 1405\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mcls\u001b[39m\u001b[38;5;241m.\u001b[39m_clone(\n\u001b[0;32m   1406\u001b[0m     git,\n\u001b[0;32m   1407\u001b[0m     url,\n\u001b[0;32m   1408\u001b[0m     to_path,\n\u001b[0;32m   1409\u001b[0m     GitCmdObjectDB,\n\u001b[0;32m   1410\u001b[0m     progress,\n\u001b[0;32m   1411\u001b[0m     multi_options,\n\u001b[0;32m   1412\u001b[0m     allow_unsafe_protocols\u001b[38;5;241m=\u001b[39mallow_unsafe_protocols,\n\u001b[0;32m   1413\u001b[0m     allow_unsafe_options\u001b[38;5;241m=\u001b[39mallow_unsafe_options,\n\u001b[0;32m   1414\u001b[0m     \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs,\n\u001b[0;32m   1415\u001b[0m )\n",
-            "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python39\\site-packages\\git\\repo\\base.py:1302\u001b[0m, in \u001b[0;36mRepo._clone\u001b[1;34m(cls, git, url, path, odb_default_type, progress, multi_options, allow_unsafe_protocols, allow_unsafe_options, **kwargs)\u001b[0m\n\u001b[0;32m   1299\u001b[0m     cmdline \u001b[38;5;241m=\u001b[39m remove_password_if_present(cmdline)\n\u001b[0;32m   1301\u001b[0m     log\u001b[38;5;241m.\u001b[39mdebug(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCmd(\u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[38;5;124m)\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124ms unused stdout: \u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[38;5;124m\"\u001b[39m, cmdline, stdout)\n\u001b[1;32m-> 1302\u001b[0m     \u001b[43mfinalize_process\u001b[49m\u001b[43m(\u001b[49m\u001b[43mproc\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mstderr\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mstderr\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   1304\u001b[0m \u001b[38;5;66;03m# Our git command could have a different working dir than our actual\u001b[39;00m\n\u001b[0;32m   1305\u001b[0m \u001b[38;5;66;03m# environment, hence we prepend its working dir if required.\u001b[39;00m\n\u001b[0;32m   1306\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m osp\u001b[38;5;241m.\u001b[39misabs(path):\n",
-            "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python39\\site-packages\\git\\util.py:483\u001b[0m, in \u001b[0;36mfinalize_process\u001b[1;34m(proc, **kwargs)\u001b[0m\n\u001b[0;32m    481\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"Wait for the process (clone, fetch, pull or push) and handle its errors accordingly\"\"\"\u001b[39;00m\n\u001b[0;32m    482\u001b[0m \u001b[38;5;66;03m# TODO: No close proc-streams??\u001b[39;00m\n\u001b[1;32m--> 483\u001b[0m proc\u001b[38;5;241m.\u001b[39mwait(\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n",
-            "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python39\\site-packages\\git\\cmd.py:657\u001b[0m, in \u001b[0;36mGit.AutoInterrupt.wait\u001b[1;34m(self, stderr)\u001b[0m\n\u001b[0;32m    655\u001b[0m     errstr \u001b[38;5;241m=\u001b[39m read_all_from_possibly_closed_stream(p_stderr)\n\u001b[0;32m    656\u001b[0m     log\u001b[38;5;241m.\u001b[39mdebug(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAutoInterrupt wait stderr: \u001b[39m\u001b[38;5;132;01m%r\u001b[39;00m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m%\u001b[39m (errstr,))\n\u001b[1;32m--> 657\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m GitCommandError(remove_password_if_present(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39margs), status, errstr)\n\u001b[0;32m    658\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m status\n",
-            "\u001b[1;31mGitCommandError\u001b[0m: Cmd('git') failed due to: exit code(128)\n  cmdline: git clone -v -- https://github.com/Natural-Language-Processing-YU/Module-1-Assignment.git /content/m1_repo\n  stderr: 'fatal: destination path '/content/m1_repo' already exists and is not an empty directory.\n'"
-          ]
+          "data": {
+            "text/plain": [
+              "<git.repo.base.Repo 'd:\\\\content\\\\m1_repo\\\\.git'>"
+            ]
+          },
+          "execution_count": 3,
+          "metadata": {},
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -155,7 +167,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -228,7 +240,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -270,7 +282,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -279,7 +291,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -339,7 +351,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 5,
       "metadata": {
         "id": "8ZoSOGaW2koc"
       },
@@ -356,7 +368,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -370,8 +382,8 @@
           "output_type": "stream",
           "text": [
             "[nltk_data] Downloading package stopwords to\n",
-            "[nltk_data]     C:\\Users\\Namrata\\AppData\\Roaming\\nltk_data...\n",
-            "[nltk_data]   Package stopwords is already up-to-date!\n"
+            "[nltk_data]     C:\\Users\\msnam\\AppData\\Roaming\\nltk_data...\n",
+            "[nltk_data]   Unzipping corpora\\stopwords.zip.\n"
           ]
         },
         {
@@ -380,7 +392,7 @@
               "True"
             ]
           },
-          "execution_count": 24,
+          "execution_count": 6,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -403,7 +415,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": 7,
       "metadata": {
         "id": "QD2ub7Dl2koe"
       },
@@ -441,7 +453,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -489,7 +501,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -534,7 +546,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": 10,
       "metadata": {
         "id": "Nwq8pacZrLXg"
       },
@@ -575,7 +587,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": 11,
       "metadata": {
         "id": "frUPXf542koh"
       },
@@ -626,7 +638,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": 12,
       "metadata": {
         "id": "YjioQEB12koh",
         "outputId": "d51f755d-83d4-4730-acb0-308485ad3ab7"
@@ -835,7 +847,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": 13,
       "metadata": {
         "id": "teSaHxFCykFP"
       },
@@ -948,7 +960,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.12"
+      "version": "3.11.5"
     }
   },
   "nbformat": 4,
